package NYT.NRpcProxy.NProto;

option java_package = "ru.yandex.yt";
option java_outer_classname = "DiscoveryProtos";
option java_multiple_files = true;

//------------------------------------------------------------------------------

message TReqDiscoverProxies
{
}

message TRspDiscoverProxies
{
    repeated string addresses = 1;
}

//------------------------------------------------------------------------------

////////////////////////////////////////////////////////////////////////////////
